ops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: findmyseries
spec: {}
status: {}
