ops/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: findmyseries
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: raweber42/findmyseries-backend:0.0.10
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
