ops/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: raweber42/findmyseries-frontend:0.0.9
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
