ops/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: backend
