ops/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: findmyseries
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: frontend
  type: ClusterIP
