ops/recommendation-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-api
  labels:
    app: recommendation-api
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: recommendation-api
