ops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: findmyseries.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: http
      - path: /recommendation-api
        pathType: Prefix
        backend:
          service:
            name: recommendation-api
            port:
              name: http
